--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
 .app-wraper {
+
   margin: 0 auto;
-  width: 1200px;
+  width: 85%;
+  height: 740px;
+
   display: grid;
   grid-template-areas:
     "h h"
@@ -12,9 +15,14 @@
 }
 
 div {
-  text-align: center;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 21px;
-  color: black;
+  
 }
 
+.app-wraper-content {
+  grid-area: c;
+  background-color: #838daa;
+  width: 99%;
+
+}
