--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,10 +1,7 @@
+img {
+  width: 80px
+}
 
-.content {
-    grid-area: c;
-    background-color: rgb(240, 237, 237);
-    width: 100%;
-  }
-
-.content img {
-  width: 50px
+.profile div {
+  padding: 3px;
 }
