--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 .app-wraper {
 
   margin: 0 auto;
-  width: 75%;
-  height: 740px;
+  height: 900px;
+  
   
 
   display: grid;
@@ -11,19 +11,25 @@
     "n c "
   ;
   grid-template-rows: 50px 1fr;
-  grid-template-columns: 2fr 10fr;
-  /* grid-gap: 10px; */
+  grid-template-columns: 2fr 15fr;
+ 
 }
 
 div {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: 21px;
+  font-size: 22px;
   
 }
 
 .app-wraper-content {
   grid-area: c;
-  background-color: #838daa;
   width: 99%;
+  background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
 
 }
+
+a:hover {
+  color: black; 
+  border-radius: 10px;
+  opacity: .5;
+ }
