--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -12,8 +12,8 @@
 
 .dialogsItem a {
     text-decoration: none;
-    color: white;
-
+    color: rgb(95, 92, 92);
+    
 
 }
 
@@ -25,6 +25,7 @@
 
 .messages {
     padding: 10px;
+    text-align: center;
 }
 
 .message {}
