--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,6 +1,6 @@
 .header {
   grid-area: h;
-  background-color: #383a45;
+  background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
   
 }
 
